Small changes to lazy.nvim ui and treesitter

--- a/config/kitty/current-theme.conf
+++ b/config/kitty/current-theme.conf
@@ -1,42 +1,50 @@
 # vim:ft=kitty
 
-foreground            #C6D0E9
-background            #20202A
-selection_foreground  #2E3440
-selection_background  #A8B6D0
-url_color             #cddbf9
+## name: Tokyo Night
+## license: MIT
+## author: Folke Lemaitre
+## upstream: https://github.com/folke/tokyonight.nvim/raw/main/extras/kitty/tokyonight_night.conf
 
-# black
-color0      #3b3b4d
-color8      #1b1b23
 
-# red
-color1      #ebb9b9
-color9      #d95e59
+background #1a1b26
+foreground #c0caf5
+selection_background #283457
+selection_foreground #c0caf5
+url_color #73daca
+cursor #c0caf5
+cursor_text_color #1a1b26
 
-# green
-color2      #caf6bb
-color10     #8fc587
+# Tabs
+active_tab_background #7aa2f7
+active_tab_foreground #16161e
+inactive_tab_background #292e42
+inactive_tab_foreground #545c7e
+#tab_bar_background #15161e
 
-# yellow
-color3      #E6DFB8
-color11     #ffcf85
+# Windows
+active_border_color #7aa2f7
+inactive_border_color #292e42
 
-# blue
-color4      #cddbf9
-color12     #4a83c3
+# normal
+color0 #15161e
+color1 #f7768e
+color2 #9ece6a
+color3 #e0af68
+color4 #7aa2f7
+color5 #bb9af7
+color6 #7dcfff
+color7 #a9b1d6
 
-# magenta
-color5      #f6bbe7
-color13     #bf83b5
+# bright
+color8 #414868
+color9 #f7768e
+color10 #9ece6a
+color11 #e0af68
+color12 #7aa2f7
+color13 #bb9af7
+color14 #7dcfff
+color15 #c0caf5
 
-# cyan
-color6      #b8dceb
-color14     #4eb3cd
-
-# white
-color7      #c8cedc
-color15     #abb2c2
-
-# Cursor
-cursor      #b8dceb
+# extended colors
+color16 #ff9e64
+color17 #db4b4b
