--- a/config/kitty/kitty.conf
+++ b/config/kitty/kitty.conf
@@ -6,7 +6,7 @@ include                 current-theme.conf
 # TAB BAR
 
 tab_bar_edge            top
-tab_bar_style           custom
+tab_bar_style           powerline
 tab_separator           ""
 tab_title_template      " {index} {title} "
 
