--- a/config/picom/picom.conf
+++ b/config/picom/picom.conf
@@ -104,8 +104,7 @@ fade-out-step = 0.1;
 inactive-opacity = 0.95;
 
 # Opacity of window titlebars and borders. (0.1 - 1.0, disabled by default)
-# frame-opacity = 1.0
-frame-opacity = 0.9;
+frame-opacity = 1;
 
 # Let inactive opacity set by -i override the '_NET_WM_WINDOW_OPACITY' values of windows.
 # inactive-opacity-override = true
@@ -210,11 +209,11 @@ blur-background-exclude = [
 # Specify the backend to use: `xrender`, `glx`, or `xr_glx_hybrid`.
 # `xrender` is the default one.
 #
-backend = "glx";
+backend = "xrender";
 
 # Enable/disable VSync.
 # vsync = false
-vsync = true;
+vsync = false;
 
 # Enable remote control via D-Bus. See the *D-BUS API* section below for more details.
 # dbus = false
@@ -418,8 +417,8 @@ log-level = "warn";
 wintypes:
 {
   tooltip = { fade = true; shadow = true; opacity = 0.75; focus = true; full-shadow = false; };
-  dock = { shadow = false; clip-shadow-above = true; }
-  dnd = { shadow = false; }
-  popup_menu = { opacity = 0.8; }
-  dropdown_menu = { opacity = 0.8; }
+  dock = { shadow = false; clip-shadow-above = false; };
+  dnd = { shadow = false; };
+  popup_menu = { opacity = 1; };
+  dropdown_menu = { opacity = 0.8; };
 };
