--- a/config/picom/picom.conf
+++ b/config/picom/picom.conf
@@ -101,7 +101,7 @@ fade-out-step = 0.1;
 
 # Opacity of inactive windows. (0.1 - 1.0, defaults to 1.0)
 # inactive-opacity = 1
-inactive-opacity = 0.95;
+inactive-opacity = 0.91;
 
 # Opacity of window titlebars and borders. (0.1 - 1.0, disabled by default)
 frame-opacity = 1;
@@ -111,7 +111,7 @@ frame-opacity = 1;
 inactive-opacity-override = false;
 
 # Default opacity for active windows. (0.0 - 1.0, defaults to 1.0)
-# active-opacity = 1.0
+active-opacity = 0.96
 
 # Dim inactive windows. (0.0 - 1.0, defaults to 0.0)
 # inactive-dim = 0.0
@@ -130,8 +130,11 @@ focus-exclude = [ "class_g = 'Cairo-clock'" ];
 # example:
 #    opacity-rule = [ "80:class_g = 'URxvt'" ];
 #
-# opacity-rule = []
-
+opacity-rule = [ "100:_NET_WM_STATE@[0]:32a = '_NET_WM_STATE_FULLSCREEN'",
+"100:_NET_WM_STATE@[1]:32a = '_NET_WM_STATE_FULLSCREEN'",
+"100:_NET_WM_STATE@[2]:32a = '_NET_WM_STATE_FULLSCREEN'",
+"100:_NET_WM_STATE@[3]:32a = '_NET_WM_STATE_FULLSCREEN'",
+"100:_NET_WM_STATE@[4]:32a = '_NET_WM_STATE_FULLSCREEN'" ];
 
 #################################
 #           Corners             #
@@ -140,7 +143,7 @@ focus-exclude = [ "class_g = 'Cairo-clock'" ];
 # Sets the radius of rounded window corners. When > 0, the compositor will
 # round the corners of windows. Does not interact well with
 # `transparent-clipping`.
-corner-radius = 3;
+corner-radius = 12;
 
 # Exclude conditions for rounded corners.
 rounded-corners-exclude = [
