--- a/config/i3/config
+++ b/config/i3/config
@@ -153,3 +153,4 @@ bindsym $mod+r mode "resize"
 
 # XDG autostart
 exec --no-startup-id dex --autostart --environment i3
+exec --no-startup-id dunst
