--- a/config/picom/picom.conf
+++ b/config/picom/picom.conf
@@ -1,386 +1,122 @@
-#################################
-#             Shadows           #
-#################################
+## picom.conf
 
 
-# Enabled client-side shadows on windows. Note desktop windows
-# (windows with '_NET_WM_WINDOW_TYPE_DESKTOP') never get shadow,
-# unless explicitly requested using the wintypes option.
-shadow = false;
+# ░█▀▀░█░█░█▀█░█▀▄░█▀█░█░█░█▀▀
+# ░▀▀█░█▀█░█▀█░█░█░█░█░█▄█░▀▀█
+# ░▀▀▀░▀░▀░▀░▀░▀▀░░▀▀▀░▀░▀░▀▀▀
 
-# The blur radius for shadows, in pixels. (defaults to 12)
-# shadow-radius = 12
-shadow-radius = 7;
-
-# The opacity of shadows. (0.0 - 1.0, defaults to 0.75)
-# shadow-opacity = .75
-
-# The left offset for shadows, in pixels. (defaults to -15)
-# shadow-offset-x = -15
+shadow = true;
+shadow-radius = 12;
+shadow-opacity = 0.75;
 shadow-offset-x = -7;
-
-# The top offset for shadows, in pixels. (defaults to -15)
-# shadow-offset-y = -15
 shadow-offset-y = -7;
 
-# Red color value of shadow (0.0 - 1.0, defaults to 0).
-# shadow-red = 0
-
-# Green color value of shadow (0.0 - 1.0, defaults to 0).
-# shadow-green = 0
-
-# Blue color value of shadow (0.0 - 1.0, defaults to 0).
-# shadow-blue = 0
-
-# Hex string color value of shadow (#000000 - #FFFFFF, defaults to #000000). This option will override options set shadow-(red/green/blue)
 # shadow-color = "#000000"
-
-# Specify a list of conditions of windows that should have no shadow.
-#
-# examples:
-#   shadow-exclude = "n:e:Notification";
-#
-# shadow-exclude = []
-shadow-exclude = [
-  "name = 'Notification'",
-  "class_g = 'Conky'",
-  "class_g ?= 'Notify-osd'",
-  "class_g = 'Cairo-clock'",
-  "_GTK_FRAME_EXTENTS@:c"
-];
-
-# Specify a list of conditions of windows that should have no shadow painted over, such as a dock window.
 # clip-shadow-above = []
 
-# Specify a X geometry that describes the region in which shadow should not
-# be painted in, such as a dock window region. Use
-#    shadow-exclude-reg = "x10+0+0"
-# for example, if the 10 pixels on the bottom of the screen should not have shadows painted on.
-#
-# shadow-exclude-reg = ""
-
-# Crop shadow of a window fully on a particular Xinerama screen to the screen.
-# xinerama-shadow-crop = false
-
-
-#################################
-#           Fading              #
-#################################
-
-
-# Fade windows in/out when opening/closing and when opacity changes,
-#  unless no-fading-openclose is used.
-# fading = false
-fading = true;
-
-# Opacity change between steps while fading in. (0.01 - 1.0, defaults to 0.028)
-# fade-in-step = 0.028
-fade-in-step = 0.1;
-
-# Opacity change between steps while fading out. (0.01 - 1.0, defaults to 0.03)
-# fade-out-step = 0.03
-fade-out-step = 0.1;
-
-# The time between steps in fade step, in milliseconds. (> 0, defaults to 10)
-# fade-delta = 10
-
-# Specify a list of conditions of windows that should not be faded.
-# fade-exclude = []
-
-# Do not fade on window open/close.
-# no-fading-openclose = false
-
-# Do not fade destroyed ARGB windows with WM frame. Workaround of bugs in Openbox, Fluxbox, etc.
-# no-fading-destroyed-argb = false
-
-
-#################################
-#   Transparency / Opacity      #
-#################################
-
-
-# Opacity of inactive windows. (0.1 - 1.0, defaults to 1.0)
-# inactive-opacity = 1
-inactive-opacity = 0.91;
-
-# Opacity of window titlebars and borders. (0.1 - 1.0, disabled by default)
-frame-opacity = 1;
-
-# Let inactive opacity set by -i override the '_NET_WM_WINDOW_OPACITY' values of windows.
-# inactive-opacity-override = true
-inactive-opacity-override = false;
-
-# Default opacity for active windows. (0.0 - 1.0, defaults to 1.0)
-active-opacity = 0.96
-
-# Dim inactive windows. (0.0 - 1.0, defaults to 0.0)
-# inactive-dim = 0.0
-
-# Specify a list of conditions of windows that should never be considered focused.
-# focus-exclude = []
-focus-exclude = [ "class_g = 'Cairo-clock'" ];
-
-# Use fixed inactive dim value, instead of adjusting according to window opacity.
-# inactive-dim-fixed = 1.0
-
-# Specify a list of opacity rules, in the format `PERCENT:PATTERN`,
-# like `50:name *= "Firefox"`. picom-trans is recommended over this.
-# Note we don't make any guarantee about possible conflicts with other
-# programs that set '_NET_WM_WINDOW_OPACITY' on frame or client windows.
-# example:
-#    opacity-rule = [ "80:class_g = 'URxvt'" ];
-#
-opacity-rule = [ "100:_NET_WM_STATE@[0]:32a = '_NET_WM_STATE_FULLSCREEN'",
-"100:_NET_WM_STATE@[1]:32a = '_NET_WM_STATE_FULLSCREEN'",
-"100:_NET_WM_STATE@[2]:32a = '_NET_WM_STATE_FULLSCREEN'",
-"100:_NET_WM_STATE@[3]:32a = '_NET_WM_STATE_FULLSCREEN'",
-"100:_NET_WM_STATE@[4]:32a = '_NET_WM_STATE_FULLSCREEN'" ];
-
-#################################
-#           Corners             #
-#################################
-
-# Sets the radius of rounded window corners. When > 0, the compositor will
-# round the corners of windows. Does not interact well with
-# `transparent-clipping`.
-corner-radius = 12;
-
-# Exclude conditions for rounded corners.
-rounded-corners-exclude = [
-  "window_type = 'dock'",
-  "window_type = 'desktop'"
+shadow-exclude = [
+    "_GTK_FRAME_EXTENTS@:c",
+    "_NET_WM_STATE@:32a *= '_NET_WM_STATE_HIDDEN'"
 ];
 
 
-#################################
-#     Background-Blurring       #
-#################################
+# ░█▀▀░█▀█░█▀▄░▀█▀░█▀█░█▀▀
+# ░█▀▀░█▀█░█░█░░█░░█░█░█░█
+# ░▀░░░▀░▀░▀▀░░▀▀▀░▀░▀░▀▀▀
+
+fading = true;
+fade-in-step = 0.02;
+fade-out-step = 0.02;
+fade-delta = 3
+
+# no-fading-openclose = false
+# no-fading-destroyed-argb = false
+
+# fade-exclude = []
 
 
-# Parameters for background blurring, see the *BLUR* section for more information.
-# blur-method =
-# blur-size = 12
-#
-# blur-deviation = false
-#
-# blur-strength = 5
+# ░▀█▀░█▀▄░█▀█░█▀█░█▀▀░█▀█░█▀█░█▀▄░█▀▀░█▀█░█▀▀░█░█
+# ░░█░░█▀▄░█▀█░█░█░▀▀█░█▀▀░█▀█░█▀▄░█▀▀░█░█░█░░░░█░
+# ░░▀░░▀░▀░▀░▀░▀░▀░▀▀▀░▀░░░▀░▀░▀░▀░▀▀▀░▀░▀░▀▀▀░░▀░
 
-# Blur background of semi-transparent / ARGB windows.
-# Bad in performance, with driver-dependent behavior.
-# The name of the switch may change without prior notifications.
-#
-# blur-background = false
+active-opacity = 1
+inactive-opacity = 0.89;
+frame-opacity = 1;
+inactive-opacity-override = false;
+# inactive-dim = 0.0
+# inactive-dim-fixed = 1.0
 
-# Blur background of windows when the window frame is not opaque.
-# Implies:
-#    blur-background
-# Bad in performance, with driver-dependent behavior. The name may change.
-#
-# blur-background-frame = false
+focus-exclude = [];
 
 
-# Use fixed blur strength rather than adjusting according to window opacity.
-# blur-background-fixed = false
+# ░█▀▀░█▀█░█▀▄░█▀█░█▀▀░█▀▄░█▀▀
+# ░█░░░█░█░█▀▄░█░█░█▀▀░█▀▄░▀▀█
+# ░▀▀▀░▀▀▀░▀░▀░▀░▀░▀▀▀░▀░▀░▀▀▀
+
+corner-radius = 8;
+
+rounded-corners-exclude = [];
 
 
-# Specify the blur convolution kernel, with the following format:
-# example:
-#   blur-kern = "5,5,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1";
-#
-# blur-kern = ""
+# ░█▀▄░█░░░█░█░█▀▄░█▀▄░▀█▀░█▀█░█▀▀
+# ░█▀▄░█░░░█░█░█▀▄░█▀▄░░█░░█░█░█░█
+# ░▀▀░░▀▀▀░▀▀▀░▀░▀░▀░▀░▀▀▀░▀░▀░▀▀▀
+
+blur-method = "dual_kawase";
+blur-size = 10
+blur-deviation = 10
+blur-strength = 5
+blur-background = false
+blur-background-frame = true
+blur-background-fixed = true
 blur-kern = "3x3box";
 
-
-# Exclude conditions for background blur.
-# blur-background-exclude = []
 blur-background-exclude = [
-  "window_type = 'dock'",
-  "window_type = 'desktop'",
   "_GTK_FRAME_EXTENTS@:c"
 ];
 
-#################################
-#       General Settings        #
-#################################
 
-# Enable remote control via D-Bus. See the man page for more details.
-# dbus = true
+# ░█▀▀░█▀▀░█▀█░█▀▀░█▀▄░█▀█░█░░
+# ░█░█░█▀▀░█░█░█▀▀░█▀▄░█▀█░█░░
+# ░▀▀▀░▀▀▀░▀░▀░▀▀▀░▀░▀░▀░▀░▀▀▀
 
-# Daemonize process. Fork to background after initialization. Causes issues with certain (badly-written) drivers.
-# daemon = false
-
-# Specify the backend to use: `xrender`, `glx`, or `xr_glx_hybrid`.
-# `xrender` is the default one.
-#
-backend = "xrender";
-
-# Enable/disable VSync.
-# vsync = false
+dbus = false
+daemon = false
+backend = "glx";
+# Vsync seems to give a bit of problems with glx on my system so I may have to disable it.
+# It's probably because of nvidia drivers.
+# vsync = false;
 vsync = true;
-
-# Enable remote control via D-Bus. See the *D-BUS API* section below for more details.
-# dbus = false
-
-# Try to detect WM windows (a non-override-redirect window with no
-# child that has 'WM_STATE') and mark them as active.
-#
-# mark-wmwin-focused = false
 mark-wmwin-focused = true;
-
-# Mark override-redirect windows that doesn't have a child window with 'WM_STATE' focused.
-# mark-ovredir-focused = false
 mark-ovredir-focused = true;
-
-# Try to detect windows with rounded corners and don't consider them
-# shaped windows. The accuracy is not very high, unfortunately.
-#
-# detect-rounded-corners = false
 detect-rounded-corners = true;
+detect-client-opacity = false;
+use-ewmh-active-win = true
 
-# Detect '_NET_WM_WINDOW_OPACITY' on client windows, useful for window managers
-# not passing '_NET_WM_WINDOW_OPACITY' of client windows to frame windows.
-#
-# detect-client-opacity = false
-detect-client-opacity = true;
-
-# Use EWMH '_NET_ACTIVE_WINDOW' to determine currently focused window,
-# rather than listening to 'FocusIn'/'FocusOut' event. Might have more accuracy,
-# provided that the WM supports it.
-#
-# use-ewmh-active-win = false
-
-# Unredirect all windows if a full-screen opaque window is detected,
-# to maximize performance for full-screen windows. Known to cause flickering
-# when redirecting/unredirecting windows.
-#
 # unredir-if-possible = false
-
-# Delay before unredirecting the window, in milliseconds. Defaults to 0.
 # unredir-if-possible-delay = 0
-
-# Conditions of windows that shouldn't be considered full-screen for unredirecting screen.
 # unredir-if-possible-exclude = []
 
-# Use 'WM_TRANSIENT_FOR' to group windows, and consider windows
-# in the same group focused at the same time.
-#
-# detect-transient = false
 detect-transient = true;
+detect-client-leader = true
+resize-damage = 1
 
-# Use 'WM_CLIENT_LEADER' to group windows, and consider windows in the same
-# group focused at the same time. This usually means windows from the same application
-# will be considered focused or unfocused at the same time.
-# 'WM_TRANSIENT_FOR' has higher priority if detect-transient is enabled, too.
-#
-# detect-client-leader = false
+glx-no-stencil = true
+glx-no-rebind-pixmap = true
 
-# Resize damaged region by a specific number of pixels.
-# A positive value enlarges it while a negative one shrinks it.
-# If the value is positive, those additional pixels will not be actually painted
-# to screen, only used in blur calculation, and such. (Due to technical limitations,
-# with use-damage, those pixels will still be incorrectly painted to screen.)
-# Primarily used to fix the line corruption issues of blur,
-# in which case you should use the blur radius value here
-# (e.g. with a 3x3 kernel, you should use `--resize-damage 1`,
-# with a 5x5 one you use `--resize-damage 2`, and so on).
-# May or may not work with *--glx-no-stencil*. Shrinking doesn't function correctly.
-#
-# resize-damage = 1
-
-# Specify a list of conditions of windows that should be painted with inverted color.
-# Resource-hogging, and is not well tested.
-#
-# invert-color-include = []
-
-# GLX backend: Avoid using stencil buffer, useful if you don't have a stencil buffer.
-# Might cause incorrect opacity when rendering transparent content (but never
-# practically happened) and may not work with blur-background.
-# My tests show a 15% performance boost. Recommended.
-#
-glx-no-stencil = true;
-
-# GLX backend: Avoid rebinding pixmap on window damage.
-# Probably could improve performance on rapid window content changes,
-# but is known to break things on some drivers (LLVMpipe, xf86-video-intel, etc.).
-# Recommended if it works.
-#
-# glx-no-rebind-pixmap = false
-
-# Disable the use of damage information.
-# This cause the whole screen to be redrawn every time, instead of the part of the screen
-# has actually changed. Potentially degrades the performance, but might fix some artifacts.
-# The opposing option is use-damage
-#
 # no-use-damage = false
 use-damage = true;
+xrender-sync-fence = true
 
-# Use X Sync fence to sync clients' draw calls, to make sure all draw
-# calls are finished before picom starts drawing. Needed on nvidia-drivers
-# with GLX backend for some users.
-#
-# xrender-sync-fence = false
-
-# GLX backend: Use specified GLSL fragment shader for rendering window
-# contents. Read the man page for a detailed explanation of the interface.
-#
-# window-shader-fg = "default"
-
-# Use rules to set per-window shaders. Syntax is SHADER_PATH:PATTERN, similar
-# to opacity-rule. SHADER_PATH can be "default". This overrides window-shader-fg.
-#
-# window-shader-fg-rule = [
-#   "my_shader.frag:window_type != 'dock'"
-# ]
-
-# Force all windows to be painted with blending. Useful if you
-# have a glx-fshader-win that could turn opaque pixels transparent.
-#
-# force-win-blend = false
-
-# Do not use EWMH to detect fullscreen windows.
-# Reverts to checking if a window is fullscreen based only on its size and coordinates.
-#
 # no-ewmh-fullscreen = false
-
-# Dimming bright windows so their brightness doesn't exceed this set value.
-# Brightness of a window is estimated by averaging all pixels in the window,
-# so this could comes with a performance hit.
-# Setting this to 1.0 disables this behaviour. Requires --use-damage to be disabled. (default: 1.0)
-#
 # max-brightness = 1.0
 
-# Make transparent windows clip other windows like non-transparent windows do,
-# instead of blending on top of them.
-#
 # transparent-clipping = false
-
-# Specify a list of conditions of windows that should never have transparent
-# clipping applied. Useful for screenshot tools, where you need to be able to
-# see through transparent parts of the window.
-#
 # transparent-clipping-exclude = []
 
-# Set the log level. Possible values are:
-#  "trace", "debug", "info", "warn", "error"
-# in increasing level of importance. Case doesn't matter.
-# If using the "TRACE" log level, it's better to log into a file
-# using *--log-file*, since it can generate a huge stream of logs.
-#
-# log-level = "debug"
 log-level = "warn";
-
-# Set the log file.
-# If *--log-file* is never specified, logs will be written to stderr.
-# Otherwise, logs will to written to the given file, though some of the early
-# logs might still be written to the stderr.
-# When setting this option from the config file, it is recommended to use an absolute path.
-#
-# log-file = "/path/to/your/log/file"
-
-# Show all X errors (for debugging)
-# show-all-xerrors = false
-
-# Write process ID to a file.
+log-file = "/home/danebidev/log/picom.log";
+show-all-xerrors = true
 # write-pid-path = "/path/to/your/log/file"
 
 # Window type settings
@@ -419,9 +155,13 @@ log-level = "warn";
 #
 wintypes:
 {
-  tooltip = { fade = true; shadow = true; opacity = 0.75; focus = true; full-shadow = false; };
-  dock = { shadow = false; clip-shadow-above = false; };
-  dnd = { shadow = false; };
-  popup_menu = { opacity = 1; };
-  dropdown_menu = { opacity = 0.8; };
+    popup_menu = { shadow = false; focus = false; opacity = 0.90; };
+    dock = { shadow = false; };
+	dnd = { shadow = false; };
+    dropdown_menu = { shadow = false; focus = false; };
+    splash = { shadow = false; focus = false; };
+    utility = { focus = false; shadow = false; blur-background = false; };
+    notification = { shadow = false; focus = false; };
+	desktop = { shadow = false; blur-background = false; };
+    menu = { shadow = false; };
 };
