--- a/config/i3/config
+++ b/config/i3/config
@@ -18,6 +18,8 @@ exec --no-startup-id dunst
 # Use Mouse+$mod to drag floating windows to their wanted position
 floating_modifier $mod
 
+popup_during_fullscreen all
+
 mouse_warping none
 
 # move tiling windows via drag & drop by left-clicking into the title bar,
@@ -126,11 +128,8 @@ bindsym $mod+Shift+8 move container to workspace $ws8
 bindsym $mod+Shift+9 move container to workspace $ws9
 bindsym $mod+Shift+0 move container to workspace $ws10
 
-# reload the configuration file
 bindsym $mod+Shift+c reload
-# restart i3 inplace (preserves your layout/session, can be used to upgrade i3)
 bindsym $mod+Shift+r restart
-# exit i3 (logs you out of your X session)
 bindsym $mod+Shift+e exec "i3-nagbar -t warning -m 'You pressed the exit shortcut. Do you really want to exit i3? This will end your X session.' -B 'Yes, exit i3' 'i3-msg exit'"
 
 # resize window (you can also use the mouse for that)
