Small changes before nvim rewrite

--- a/config/picom/picom.conf
+++ b/config/picom/picom.conf
@@ -15,8 +15,8 @@ shadow-offset-y = -7;
 # clip-shadow-above = []
 
 shadow-exclude = [
-    "_GTK_FRAME_EXTENTS@:c",
-    "_NET_WM_STATE@:32a *= '_NET_WM_STATE_HIDDEN'"
+    "_GTK_FRAME_EXTENTS@",
+    "_NET_WM_STATE@ *= '_NET_WM_STATE_HIDDEN'"
 ];
 
 
@@ -53,7 +53,7 @@ focus-exclude = [];
 # ░█░░░█░█░█▀▄░█░█░█▀▀░█▀▄░▀▀█
 # ░▀▀▀░▀▀▀░▀░▀░▀░▀░▀▀▀░▀░▀░▀▀▀
 
-corner-radius = 8;
+corner-radius = 10;
 
 rounded-corners-exclude = [];
 
@@ -72,7 +72,7 @@ blur-background-fixed = true
 blur-kern = "3x3box";
 
 blur-background-exclude = [
-  "_GTK_FRAME_EXTENTS@:c"
+  "_GTK_FRAME_EXTENTS@"
 ];
 
 
