a bit of Hyprland configuration

--- a/hypr/dot-config/hypr/hyprland.conf
+++ b/hypr/dot-config/hypr/hyprland.conf
@@ -1,7 +1,9 @@
 # source = ~/.config/hypr/myColors.conf
 
 exec-once=dunst
+exec-once=swww-daemon
 exec-once=/usr/lib/polkit-kde-authentication-agent-1
+exec-once=$DOTFILES/hypr/dot-config/hypr/scripts/wallpaper.sh
 
 # Needed for nvidia
 env = LIBVA_DRIVER_NAME,nvidia
@@ -13,7 +15,6 @@ env = __GLX_VENDOR_LIBRARY_NAME,nvidia
 env = NVD_BACKEND,direct
 
 env = ELECTRON_OZONE_PLATFORM_HINT,auto
-
 
 ################
 ### MONITORS ###
@@ -65,8 +66,8 @@ env = HYPRCURSOR_SIZE,24
 
 # https://wiki.hyprland.org/Configuring/Variables/#general
 general { 
-    gaps_in = 5
-    gaps_out = 20
+    gaps_in = 7
+    gaps_out = 15
 
     border_size = 2
 
@@ -85,11 +86,11 @@ general {
 
 # https://wiki.hyprland.org/Configuring/Variables/#decoration
 decoration {
-    rounding = 10
+    rounding = 8
 
     # Change transparency of focused and unfocused windows
-    active_opacity = 1.0
-    inactive_opacity = 1.0
+    active_opacity = 0.99
+    inactive_opacity = 0.95
 
     drop_shadow = true
     shadow_range = 4
@@ -146,10 +147,10 @@ misc {
 
 # https://wiki.hyprland.org/Configuring/Variables/#input
 input {
-    kb_layout = us
+    kb_layout = us,it
     kb_variant =
     kb_model =
-    kb_options =
+    kb_options = grp:alt_shift_toggle
     kb_rules =
 
     follow_mouse = 1
