--- a/hypr/dot-config/hypr/hyprland.conf
+++ b/hypr/dot-config/hypr/hyprland.conf
@@ -131,7 +131,7 @@ dwindle {
 
 # See https://wiki.hyprland.org/Configuring/Master-Layout/ for more
 master {
-    new_is_master = true
+    new_status = slave
 }
 
 # https://wiki.hyprland.org/Configuring/Variables/#misc
@@ -174,6 +174,10 @@ device {
     sensitivity = -0.5
 }
 
+debug {
+    disable_logs = false
+}
+
 
 ####################
 ### KEYBINDINGSS ###
@@ -191,7 +195,7 @@ bind = $mainMod, V, togglefloating,
 bind = $mainMod, P, exec, $menu
 bind = $mainMod, F, fullscreen
 bind = $mainMod, N, togglesplit, # dwindle
-bind = $mainMod, S, exec, hyprshot --mode region
+bind = $mainMod, S, exec, $DOTFILES/hypr/dot-config/hypr/scripts/screenshot.sh
 
 # Move focus with mainMod + arrow keys
 bind = $mainMod, H, movefocus, l
