Small changes for openrc

--- a/hypr/dot-config/hypr/hyprland.conf
+++ b/hypr/dot-config/hypr/hyprland.conf
@@ -1,11 +1,15 @@
 # source = ~/.config/hypr/myColors.conf
 
+exec-once=dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
+
+exec-once=$DOTFILES/hypr/dot-config/hypr/scripts/pipewire.sh
 exec-once=dunst
 exec-once=swww-daemon
 exec-once=/usr/lib/polkit-kde-authentication-agent-1
 exec-once=$DOTFILES/hypr/dot-config/hypr/scripts/wallpaper.sh
+exec-once=$DOTFILES/hypr/dot-config/hypr/scripts/xdg-portal-hyprland.sh
 
-# Needed for nvidia
+# Nvidia
 env = LIBVA_DRIVER_NAME,nvidia
 env = XDG_SESSION_TYPE,wayland
 env = GBM_BACKEND,nvidia-drm
@@ -105,6 +109,10 @@ decoration {
         
         vibrancy = 0.1696
     }
+}
+
+cursor {
+    no_hardware_cursors = true
 }
 
 # https://wiki.hyprland.org/Configuring/Variables/#animations
