--- a/hypr/dot-config/hypr/hyprland.conf
+++ b/hypr/dot-config/hypr/hyprland.conf
@@ -70,14 +70,14 @@ env = HYPRCURSOR_SIZE,24
 
 # https://wiki.hyprland.org/Configuring/Variables/#general
 general { 
-    gaps_in = 7
-    gaps_out = 15
+    gaps_in = 0
+    gaps_out = 0
 
     border_size = 2
 
     # https://wiki.hyprland.org/Configuring/Variables/#variable-types for info about colors
-    col.active_border = rgba(33ccffee) rgba(00ff99ee) 45deg
-    col.inactive_border = rgba(595959aa)
+    col.inactive_border = rgba(343F44FF)
+    col.active_border = rgba(717272FF)
 
     # Set to true enable resizing windows by clicking and dragging on borders and gaps
     resize_on_border = false 
@@ -90,20 +90,20 @@ general {
 
 # https://wiki.hyprland.org/Configuring/Variables/#decoration
 decoration {
-    rounding = 8
+    rounding = 0
 
     # Change transparency of focused and unfocused windows
-    active_opacity = 0.99
-    inactive_opacity = 0.95
+    active_opacity = 1
+    inactive_opacity = 1
 
-    drop_shadow = true
+    drop_shadow = false
     shadow_range = 4
     shadow_render_power = 3
     col.shadow = rgba(1a1a1aee)
 
     # https://wiki.hyprland.org/Configuring/Variables/#blur
     blur {
-        enabled = true
+        enabled = false
         size = 3
         passes = 1
         
@@ -183,7 +183,7 @@ device {
 }
 
 debug {
-    disable_logs = false
+    disable_logs = true
 }
 
 
