--- a/pkgbuild/s6/PKGBUILD
+++ b/pkgbuild/s6/PKGBUILD
@@ -8,9 +8,16 @@ license=('ISC')
 depends=('skalibs' 'execline' 'libskarnet.so' 'libexecline.so')
 provides=('libs6.so')
 source=("https://skarnet.org/software/${pkgname}/${pkgname}-${pkgver}.tar.gz"
-        "s6log.conf")
+        "s6log.conf"
+        "remove-max-size.patch")
 sha256sums=('7e46f8f55d80bb0e2025a64d5d649af4a4ac21e348020caaadde30ba5e5b4830'
-            'c91dcb5b5ca58a9dec7f7f7ef89a42cf9376ede97346734445d264b268bd3ae8')
+            'c91dcb5b5ca58a9dec7f7f7ef89a42cf9376ede97346734445d264b268bd3ae8'
+            '80a02966962722d56b1e845ffa0ec7d1cd64829fb966481a139e9deba7efd2fa')
+
+prepare() {
+    cd ${pkgname}-${pkgver}
+    patch -Np1 -i ../remove-max-size.patch
+}
 
 build() {
   cd ${pkgname}-${pkgver}
