--- a/config/foot/colors.ini
+++ b/config/foot/colors.ini
@@ -1,12 +1,12 @@
 ## https://gist.github.com/jakesco/c9b11f362f4ae0251ba2ca99a4e1e005
 
-## =========== Everforest - Dark - Hard ================= ##
 [colors]
+## =========== Everforest - Dark - Medium ================= ##
 alpha=1.0
-background=2b3339
+background=232a2e
 foreground=d3c6aa
 
-regular0=4b565c # black
+regular0=232a2e # black
 regular1=e67e80 # red
 regular2=a7c080 # green
 regular3=dbbc7f # yellow
@@ -15,7 +15,7 @@ regular5=d699b6 # magenta
 regular6=83c092 # cyan
 regular7=d3c6aa # white
 
-bright0=4b565c # black
+bright0=232a2e # black
 bright1=e67e80 # red
 bright2=a7c080 # green
 bright3=dbbc7f # yellow
