--- a/config/tmux/tmux.conf
+++ b/config/tmux/tmux.conf
@@ -48,3 +48,18 @@ bind -r H resize-pane -L 5
 bind -r J resize-pane -D 5
 bind -r K resize-pane -U 5
 bind -r L resize-pane -R 5
+
+# Theme
+set -g @dracula-plugins "ssh-session cpu-usage ram-usage time"
+set -g @dracula-refresh-rate 2
+set -g @dracula-show-left-icon hostname
+set -g @dracula-show-empty-plugins false
+
+# Plugins
+set-environment -g TMUX_PLUGIN_MANAGER_PATH '~/.local/share/tmux/plugins/'
+
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'dracula/tmux'
+
+# Initialize TMUX plugin manager
+run '~/.local/share/tmux/plugins/tpm/tpm'
