[tmux] Removed ssh-session from status bar

--- a/config/tmux/tmux.conf
+++ b/config/tmux/tmux.conf
@@ -50,7 +50,7 @@ bind -r K resize-pane -U 5
 bind -r L resize-pane -R 5
 
 # Theme
-set -g @dracula-plugins "ssh-session cpu-usage ram-usage time"
+set -g @dracula-plugins "cpu-usage ram-usage time"
 set -g @dracula-refresh-rate 2
 set -g @dracula-show-left-icon hostname
 set -g @dracula-show-empty-plugins false
