--- a/config/sway/config
+++ b/config/sway/config
@@ -1,6 +1,6 @@
 set $mod Mod4
 
-font pango:JetBrainsMono Nerd Font 8
+font pango:JetBrainsMonoNL Nerd Font 8
 
 output DP-3 {
     mode 1920x1080@165.003Hz
@@ -11,6 +11,8 @@ output HDMI-A-1 {
     mode 1920x1080@59.939Hz
     position 0,0
 }
+
+output * render_bit_depth 8
 
 focus output DP-3
 
