--- a/config/foot/foot.ini
+++ b/config/foot/foot.ini
@@ -1,6 +1,6 @@
 # -*- conf -*-
 
-font=JetBrainsMonoNL Nerd Font=11
+font=JetBrainsMonoNL Nerd Font:size=11
 include=~/.config/foot/colors.ini
 
 resize-by-cells=false
