[tmux] Added auto renumber-windows

--- a/config/tmux/tmux.conf
+++ b/config/tmux/tmux.conf
@@ -9,6 +9,8 @@ set -sg escape-time 1
 set -g base-index 1
 setw -g pane-base-index 1
 
+set -g renumber-windows on
+
 #Mouse works as expected
 set -g mouse on
 
