--- a/config/tmux/tmux.conf
+++ b/config/tmux/tmux.conf
@@ -3,7 +3,7 @@ bind C-a send-prefix
 unbind C-b
 
 set -g default-command "${SHELL}"
-set -as terminal-features ",foot*:RGB"
+set -as terminal-features "foot*:sixel:RGB:256:hyperlinks"
 
 set -sg escape-time 1
 set -g base-index 1
@@ -30,7 +30,7 @@ bind-key -T copy-mode-vi 'Space' send -X halfpage-down
 bind-key -T copy-mode-vi 'Bspace' send -X halfpage-up
 
 # easy-to-remember split pane commands
-bind | split-window -h
+bind | split-window -h -c "#{pane_current_path}"
 bind - split-window -v
 unbind '"'
 unbind %
