[tmux] Increased history-limit

--- a/config/tmux/tmux.conf
+++ b/config/tmux/tmux.conf
@@ -1,4 +1,5 @@
 set -g prefix C-a
+set input-buffer-size 104857600
 bind C-a send-prefix
 unbind C-b
 
@@ -18,7 +19,7 @@ setw -g monitor-activity on
 set -g visual-activity on
 
 set -g mode-keys vi
-set -g history-limit 10000
+set -g history-limit 100000
 
 # y and p as in vim
 bind Escape copy-mode
